snippets/devops/kubernetes/service-types.yaml
# ClusterIP Service (default)
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
---
# NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080  # 30000-32767 range
---
# LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: api-loadbalancer
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  loadBalancerSourceRanges:
  - 10.0.0.0/8
  - 172.16.0.0/12
---
# Headless Service (for StatefulSets)
apiVersion: v1
kind: Service
metadata:
  name: database-headless
  namespace: default
spec:
  clusterIP: None  # Headless
  selector:
    app: database
  ports:
  - name: db
    protocol: TCP
    port: 5432
    targetPort: 5432
---
# ExternalName Service
apiVersion: v1
kind: Service
metadata:
  name: external-api
  namespace: default
spec:
  type: ExternalName
  externalName: api.external-service.com
  ports:
  - protocol: TCP
    port: 443
